--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -25,8 +25,8 @@
 \parskip 6pt plus 1pt
 
 % header content
-\doclabel{Math 661 Optimization}
-\docdate{Fall 2022 (Bueler)}
+\doclabel{Math 615 Numerical Analysis of Differential Equations}
+\docdate{Spring 2023 (Bueler)}
 
 % macros
 \renewcommand{\d}{\displaystyle}
@@ -48,22 +48,50 @@
 \centerline{\Large \textbf{Weekly Schedule}}
 
 \bigskip
-The schedule below is subject to changes!  The planned Sections to cover in lecture, on each day, are in black.  See the public course webpage
+The schedule below is subject to changes!  See the public course webpage
 
 \medskip
 
 \centerline{\href{https://bueler.github.io/nade/index.html}{\texttt{bueler.github.io/nade/}}}
 
-\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Classes are MWF 10:30--11:30pm, Brooks 302.
+\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Planned lecture Sections are here in black.  Classes are MWF 10:30--11:30pm, Brooks 302.
 
 \bigskip
 
 \begin{tabularx}{1.03\textwidth}{l|>{\raggedright\arraybackslash}X|X|X|}
 \textbf{Week} \quad Dates & M & W & F \\ \hline
 
-\wkday{1}{8/29}{9/2}    & & & \\ \hline
+\wkday{1}{1/16}{1/20}     & \vac{AK Civil Rights Day} & & \\ \hline
 
-\wkday{16}{12/12}{12/16} & \vac{no class} \par \proj{Project part II due} & \vac{no class} & \ee{Final Exam}  \\ \hline
+\wkday{2}{1/23}{1/27}     & \hdue{A1?} & & \\ \hline
+
+\wkday{3}{1/30}{2/3}      & & & \\ \hline
+
+\wkday{4}{2/6}{2/10}      & & & \\ \hline
+
+\wkday{5}{2/13}{2/17}     & & & \\ \hline
+
+\wkday{6}{2/20}{2/24}     & & & \\ \hline
+
+\wkday{7}{2/27}{3/3}      & & & \\ \hline
+
+\wkday{8}{3/6}{3/10}      & & & \\ \hline
+
+\wkday{9}{3/13}{3/17}     & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
+
+\wkday{10}{3/20}{3/24}    & & & \\ \hline
+
+\wkday{11}{3/27}{3/31}    & \proj{Project Proposal?} & & \\ \hline
+
+\wkday{12}{4/3}{4/7}      & & & \\ \hline
+
+\wkday{13}{4/10}{4/14}    & & & \\ \hline
+
+\wkday{14}{4/17}{4/21}    & & & \\ \hline
+
+\wkday{15}{4/24}{4/28}    & & & \\ \hline
+
+\wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project part II due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
 
 \end{tabularx}
 
