--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -61,37 +61,37 @@ The schedule below is subject to changes!  See the public course webpage
 \begin{tabularx}{1.03\textwidth}{l|>{\raggedright\arraybackslash}X|X|X|}
 \textbf{Week} \quad Dates & M & W & F \\ \hline
 
-\wkday{1}{1/16}{1/20}     & \vac{AK Civil Rights Day} & & \\ \hline
+\wkday{1}{1/16}{1/20}     & \vac{AK Civil Rights Day} & example & 1.1, 1.2 \\ \hline
 
-\wkday{2}{1/23}{1/27}     & \hdue{A1?} & & \\ \hline
+\wkday{2}{1/23}{1/27}     & 1.3, 1.4 & 2.1, 2.2 & 2.3, 2.4 \par \hdue{A1} \\ \hline
 
-\wkday{3}{1/30}{2/3}      & & & \\ \hline
+\wkday{3}{1/30}{2/3}      & 2.5, 2.6 & 2.7, 2.8 & 2.9, 2.10 \\ \hline  % AWAY
 
-\wkday{4}{2/6}{2/10}      & & & \\ \hline
+\wkday{4}{2/6}{2/10}      & 2.11, 2.12 & 2.13 & 2.14, 2.15 \\ \hline  % AWAY
 
-\wkday{5}{2/13}{2/17}     & & & \\ \hline
+\wkday{5}{2/13}{2/17}     & 2.16, 2.17 & & 2.8, 2.21 \\ \hline
 
-\wkday{6}{2/20}{2/24}     & & & \\ \hline
+\wkday{6}{2/20}{2/24}     & 3.1, 3.2 & 3.3, 3.4 & 3.6 \\ \hline
 
-\wkday{7}{2/27}{3/3}      & & & \\ \hline
+\wkday{7}{2/27}{3/3}      & 3.7 & slides & slides \\ \hline
 
-\wkday{8}{3/6}{3/10}      & & & \\ \hline
+\wkday{8}{3/6}{3/10}      & 5.1, 5.2, 5.3 & 5.4, 5.5, 5.6 & 5.7 \\ \hline
 
 \wkday{9}{3/13}{3/17}     & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
 
-\wkday{10}{3/20}{3/24}    & & & \\ \hline
+\wkday{10}{3/20}{3/24}    & 5.8, 5.9 & 6.1, 6.2 & \ee{Midterm Exam} \\ \hline
 
-\wkday{11}{3/27}{3/31}    & \proj{Project Proposal?} & & \\ \hline
+\wkday{11}{3/27}{3/31}    & 6.3, 6.4 & 7.1, 7.2, 7.3 & 7.4 \\ \hline
 
-\wkday{12}{4/3}{4/7}      & & & \\ \hline
+\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
 
-\wkday{13}{4/10}{4/14}    & & & \\ \hline
+\wkday{13}{4/10}{4/14}    & 9.1, 9.2 & 9.3, 9.4 & 9.5 \\ \hline
 
-\wkday{14}{4/17}{4/21}    & & & \\ \hline
+\wkday{14}{4/17}{4/21}    & 10.1, 10.2 & 10.3, 10.4 & 10.5 \\ \hline
 
-\wkday{15}{4/24}{4/28}    & & & \\ \hline
+\wkday{15}{4/24}{4/28}    & 10.7 & & \\ \hline
 
-\wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project part II due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
+\wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project: due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
 
 \end{tabularx}
 
