--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -63,7 +63,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{1}{1/16}{1/20}     & \vac{AK Civil Rights Day} & example & 1.1, 1.2 \\ \hline
 
-\wkday{2}{1/23}{1/27}     & 1.3, 1.4 & 2.1, 2.2 & 2.3, 2.4 \par \hdue{A1} \\ \hline
+\wkday{2}{1/23}{1/27}     & 1.3, 1.4 & 2.1, 2.2 & 2.3, 2.4 \par \hdue{A1} \, \dl{drops} \\ \hline
 
 \wkday{3}{1/30}{2/3}      & 2.5, 2.6 & 2.7, 2.8 & 2.9, 2.10 \\ \hline  % AWAY
 
@@ -81,9 +81,9 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{10}{3/20}{3/24}    & 5.8, 5.9 & 6.1, 6.2 & \ee{Midterm Exam} \\ \hline
 
-\wkday{11}{3/27}{3/31}    & 6.3, 6.4 & 7.1, 7.2, 7.3 & 7.4 \\ \hline
+\wkday{11}{3/27}{3/31}    & 6.3, 6.4 \par \proj{Project: announced} & 7.1, 7.2, 7.3 & 7.4 \par \dl{withdrawals} \\ \hline
 
-\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
+\wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
 
 \wkday{13}{4/10}{4/14}    & 9.1, 9.2 & 9.3, 9.4 & 9.5 \\ \hline
 
@@ -91,7 +91,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{15}{4/24}{4/28}    & 10.7 & & \\ \hline
 
-\wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project: due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
+\wkday{16}{5/1}{5/5} & \vac{no class} \par \proj{Project: complete due} & \ee{Final Exam} \par THURSDAY 5/4 \par 10:15--12:15 &   \\ \hline
 
 \end{tabularx}
 
