--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -54,7 +54,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \centerline{\href{https://bueler.github.io/nade/index.html}{\texttt{bueler.github.io/nade/}}}
 
-\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Planned lecture Sections are here in black.  Classes are MWF 10:30--11:30pm, Brooks 302.
+\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Planned Sections to cover in lecture are here in black.  Classes are MWF 10:30--11:30am, Brooks 302.
 
 \bigskip
 
