--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 2: \today} \normalsize
+\hfill \small \emph{version 3: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -54,7 +54,7 @@ The schedule below is subject to changes!  See the public course webpage
 
 \centerline{\href{https://bueler.github.io/nade/index.html}{\texttt{bueler.github.io/nade/}}}
 
-\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Material covered in lecture is in black.  Classes are MWF 10:30--11:30am, Brooks 302.
+\noindent for \due{Homework}, \ee{Exams}, and \proj{Project} details.  Material covered in lecture is in black.  Note some \dl{deadlines}.  Classes are MWF 10:30--11:30am, Brooks 302.
 
 \bigskip
 
@@ -63,15 +63,15 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{1}{1/16}{1/20}     & \vac{AK Civil Rights Day} \par \phantom{x} & example & 1.1, 1.2 \\ \hline
 
-\wkday{2}{1/23}{1/27}     & 1.3, 1.4 & 2.1, 2.2 & 2.3, 2.4 \par \hdue{A1} \, \dl{drops} \\ \hline
+\wkday{2}{1/23}{1/27}     & 1.3, 1.4 & 2.1, 2.2 \par \hdue{A1} & 2.3, 2.4 \par \dl{drops} \\ \hline
 
 \wkday{3}{1/30}{2/3}      & 2.5, 2.6 \par \phantom{x} & 2.7, 2.8, 2.9 & 2.10 \\ \hline  % AWAY
 
-\wkday{4}{2/6}{2/10}      &  & slides \vac{(no lecture)} & slides \vac{(no lecture)} \par \phantom{x} \\ \hline  % AWAY
+\wkday{4}{2/6}{2/10}      & 2.12, 2.13 & slides \vac{(no lecture)} & slides \vac{(no lecture)} \par \phantom{x} \\ \hline  % AWAY
 
-\wkday{5}{2/13}{2/17}     & 2.12, 2.13 \par \hdue{A2} & 2.14, 2.15 \par \hdue{A3} & \\ \hline
+\wkday{5}{2/13}{2/17}     & 2.16 \par \hdue{A2} & 2.14, 2.15 \par \hdue{A3} & 2.17 \\ \hline
 
-\wkday{6}{2/20}{2/24}     & 2.16, 2.17 & 2.18, 2.21 & 3.1, 3.2 \\ \hline
+\wkday{6}{2/20}{2/24}     & 2.18, 2.21 &  & 3.1, 3.2 \\ \hline
 
 \wkday{7}{2/27}{3/3}      & 3.3, 3.4 & 3.6 & 3.7 \\ \hline
 
