--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 4: \today} \normalsize
+\hfill \small \emph{version 5: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -69,11 +69,11 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{4}{2/6}{2/10}      & 2.12, 2.13 & slides \vac{(no lecture)} & slides \vac{(no lecture)} \par \phantom{x} \\ \hline  % AWAY
 
-\wkday{5}{2/13}{2/17}     & 2.16 \par \hdue{A2} & 2.14, 2.15 & 2.17 \\ \hline
+\wkday{5}{2/13}{2/17}     & 2.15, 2.16 \par \hdue{A2} & 2.17 & 2.18 \\ \hline
 
-\wkday{6}{2/20}{2/24}     & 2.18, 2.21 \par \hdue{A3} &  & 3.1, 3.2 \\ \hline
+\wkday{6}{2/20}{2/24}     & 3.1, 3.2 \par \hdue{A3} & 3.3, 3.4 & 3.5 \\ \hline
 
-\wkday{7}{2/27}{3/3}      & 3.3, 3.4 & 3.6 & 3.7 \\ \hline
+\wkday{7}{2/27}{3/3}      & 3.6, 3.7 \par \hdue{A4} &  &  \\ \hline
 
 \wkday{8}{3/6}{3/10}      & 5.1, 5.2, 5.3 & 5.4, 5.5, 5.6 & 5.7 \\ \hline
 
