--- a/assets/homework/S23/A4.tex
+++ b/assets/homework/S23/A4.tex
@@ -85,14 +85,14 @@ width=#3in]{#1.eps}}
 \large
 \bigskip
 
-\centerline{\textbf{Due Monday, 27 February 2023, at the start of class}}
+\centerline{\textbf{Due Wednesday, 1 March 2023, at the start of class} (\emph{revised})}
 \bigskip
 \normalsize
 
 \thispagestyle{empty}
 
 \bigskip
-Please read sections 2.12--2.21 and 3.1--3.4 from the textbook.\footnote{R.~J.~LeVeque, \emph{Finite Difference Methods for Ordinary and Partial Diff.~Eqns.}, SIAM Press 2007}  Two of the problems below require you to remember that you can find the general solutions of constant-coefficient, linear, homogeneous ODEs by hand when needed.
+Please read sections 2.12--2.21 and 3.1--3.4 from the textbook.\footnote{R.~J.~LeVeque, \emph{Finite Difference Methods for Ordinary and Partial Diff.~Eqns.}, SIAM Press 2007}  Two of the problems below require you to remember that you can find the general solutions of constant-coefficient, linear, homogeneous ODEs \emph{by hand} when needed.
 
 \medskip
 \prob{Problem P18.}  (\emph{A sometimes ill-posed boundary value problem.}) 
@@ -125,13 +125,18 @@ Is it the only solution?
 \epart{c}  Observe that the solutions for small values of $m$ are poor but the high $m$ solutions all basically agree.  Why do you think that small $m$ values are problematic here, though they are not for the problem solved in section 2.4?   Write a few sentences, perhaps based on a bit of research into section 2.17 or wikipedia pages. (\emph{Hint.}  Observe that the exact solution in part \textbf{a)} mostly does not ``feel'' one of the boundary conditions.  Also consider the $p=+20$ case, with other data the same.  What is the exact solution to the reduced equation $pu'=0$ and what boundary conditions does it need?)
 
 
-\prob{Problem P21.}  (\emph{Poisson equation on the unit square.})
+\prob{Problem P21.}  (\emph{This problem is updated.})  \quad (\emph{Poisson equation on the unit square.})
 
-\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1, 0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f=f(x,y)$.
+\epart{a}  Based on the ideas in sections 3.1--3.3, namely centered finite differences, write a \Matlab/etc.~code that solves Poisson equation (3.5) on the unit square $0\le x \le 1, 0 \le y \le 1$, with zero Dirichlet boundary conditions.  Allow the user to set the function $f=f(x,y)$.  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.
 
-\epart{b}  Find an appropriate nonzero exact solution that allows you to verify that the code converges at the theoretically-expected rate.  (That is, show that $\|E^h\|_\infty \to 0$, as $h\to 0$, at the rate $O(h^2)$ if $\Delta x = \Delta y = h = 1 / (m+1)$.)  You may, as usual, use \Matlab's backslash, or equivalent, to solve the linear system.
+\medskip
+\noindent \emph{Hint.}  Start from my code \texttt{heat2d.m} at
 
-\epart{c}  Use \Matlab's \texttt{spy}, or similar, to show the sparsity pattern of the matrix $A^h$ for $m=5$.  Also confirm in that case that the matrix has the the form shown by equation (3.12).
+\url{https://bueler.github.io/nade/assets/codes/heat2d.m}.
+
+\epart{b}  Find an appropriate nonzero exact solution that allows you to verify that the code converges at the theoretically-expected rate.  That is, show that $\|E^h\|_2 \to 0$, as $h\to 0$, at the rate $O(h^2)$ if $\Delta x = \Delta y = h = 1 / (m+1)$.
+
+\epart{c}  Use \Matlab's \texttt{spy}, or similar, to show the sparsity pattern of the matrix $A^h$ for $m=5$.  Also confirm in that case that the matrix has the form shown by equation (3.12).
 
 
 \end{document}
