minor: typo in solution comments

--- a/assets/homework/S23/A5.tex
+++ b/assets/homework/S23/A5.tex
@@ -141,8 +141,8 @@ Use \Matlab to generate a single clear figure showing all the eigenvalues of all
 % see eigpath.m
 
 \epart{b}  By doing a by-hand calculation, at what $x$ value in the interval $[-1,5]$ do non-real eigenvalues first appear?  (\emph{Hint.}  Your answer will be compatible with your figure if you have done everything right.)
-% p(lam) = (lam + 1) (lam^2 - 3 lam + 2 + x)
-% in solving quadratic  lam^2 - 3 lam + 2 + x = 0, the discriminant is
+% p(lam) = (lam + 1) (lam^2 - 3 lam + 2 + 2 x)
+% in solving quadratic  lam^2 - 3 lam + 2 + 2 x = 0, the discriminant is
 %  b^2-4ac = 1 - 8x
 % this is zero, giving a repeated root, at x=1/8
 
