--- a/assets/general/S23/schedule.tex
+++ b/assets/general/S23/schedule.tex
@@ -42,7 +42,7 @@
 
 
 \begin{document}
-\hfill \small \emph{version 7: \today} \normalsize
+\hfill \small \emph{version 8: \today} \normalsize
 
 \bigskip\bigskip
 \centerline{\Large \textbf{Weekly Schedule}}
@@ -73,15 +73,15 @@ The schedule below is subject to changes!  See the public course webpage
 
 \wkday{6}{2/20}{2/24}     & 3.1, 3.2 \par \hdue{A3} & 3.3, 3.4 & 3.5 \\ \hline
 
-\wkday{7}{2/27}{3/3}      & 3.6, 3.7 & 5.1, 5.2 \par \hdue{A4} & 5.3, 5.6 \\ \hline
+\wkday{7}{2/27}{3/3}      & 3.6, 3.7 & 5.1, 5.2 \par \hdue{A4} & 5.3 \\ \hline
 
-\wkday{8}{3/6}{3/10}      & 5.4, 5.5 & 5.7 & 5.8 \\ \hline
+\wkday{8}{3/6}{3/10}      & 5.6, 5.7 & 5.4, 5.5 & 5.8 \\ \hline
 
 \wkday{9}{3/13}{3/17}     & \vac{Spring Break} & \vac{Spring Break} & \vac{Spring Break} \\ \hline
 
 \wkday{10}{3/20}{3/24}    & 5.9 \par \hdue{A5} & 6.1, 6.2 & \ee{Midterm Exam} \\ \hline
 
-\wkday{11}{3/27}{3/31}    & 6.3, 6.4 \par \proj{Project: announced} & 7.1, 7.2, 7.3 & 7.4 \par \dl{withdrawals} \\ \hline
+\wkday{11}{3/27}{3/31}    & 6.3, 6.4 \par \proj{Project: announced} & 7.1, 7.2, 7.3 \par \hdue{A6} & 7.4 \par \dl{withdrawals} \\ \hline
 
 \wkday{12}{4/3}{4/7}      & 7.5, 7.6 \par \proj{Project: proposal due} & 8.1, 8.2 & 8.3, 8.4 \\ \hline
 
